[tool.poetry]
name = "recipe-mgt-api"
version = "0.1.0"
description = "This handles a recipe management api"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
black = "^24.3.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-func-cov = "^0.2.3"
pytest-cov = "^5.0.0"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
black = "^24.3.0"
httpx = "^0.27.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-func-cov = "^0.2.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
